--- a/frontend.html
+++ b/frontend.html
@@ -2,55 +2,42 @@
 <html>
 <head>
   <title>Security Chatbot</title>
+  <!-- Markdown parser -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
+    /* Top bar */
     .bar {
-      width: 100%;                      
+      width: 100%;
       background-color: #1a73e8;
       text-align: center;
       padding: 20px 0;
       box-sizing: border-box;
     }
-    .footer {
-      position: fixed;   
-      bottom: 0;        
-      left: 0;   
-      width: 100%; 
-      height: 60px;
-      line-height: 20px; 
-      background-color: #1a73e8;
-      color: #ffffff;
-      font-size: 0.8rem;
-      text-align: center;
-      border-top: 1px solid #ddd;
-      white-space: nowrap;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      padding: 0;
-      background: #f2f2f2;
-      margin: 0;
-      box-sizing: border-box;
-    }
+
+    /* Chat bubbles container */
     #chatBox {
+      display: none;
       width: 100%;
       max-width: 600px;
       margin: 20px auto;
-      background: white;
+      background: #fff;
       border-radius: 10px;
       padding: 30px;
       max-height: 500px;
       overflow-y: auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      display: none;
     }
 
+    /* Messages */
     .message {
       clear: both;
       margin: 10px 0;
+      white-space: normal; /* allow paragraphs & lists */
     }
-
+    .message p { margin: 0.5em 0; }
+    .message ol, .message ul {
+      margin: 0.5em 0 0.5em 1.5em;
+    }
     .user {
       float: right;
       background: #e8f0fe;
@@ -60,7 +47,6 @@
       max-width: 80%;
       word-wrap: break-word;
     }
-
     .bot {
       float: left;
       background: #f1f3f4;
@@ -71,20 +57,34 @@
       word-wrap: break-word;
     }
 
-
+    /* Input section */
     #inputSection {
+      display: flex;
       max-width: 600px;
       margin: 20px auto;
-      display: flex;
-      gap: 10px;
     }
-    #queryInput {
-    flex:1;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    }
+    .editable-input {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-family: inherit;
+      font-size: 0.9rem;
+      line-height: 1.2;
 
+      /* start at natural height, grow only when needed */
+      height: auto;
+      max-height: calc(1em * 2.5 + 0.1px);
+      overflow-y: auto;
+      white-space: pre-wrap;
+    }
+    .editable-input:empty:before {
+      content: attr(data-placeholder);
+      color: #aaa;
+      pointer-events: none;
+      display: block;
+      white-space: nowrap;
+    }
     button {
       padding: 10px 20px;
       border: none;
@@ -94,12 +94,12 @@
       cursor: pointer;
     }
 
+    /* FAQ buttons */
     #faqSection {
       max-width: 600px;
       margin: 20px auto;
       text-align: center;
     }
-
     #faqSection button {
       margin: 5px;
       padding: 10px;
@@ -109,106 +109,162 @@
       cursor: pointer;
     }
 
+    /* Footer */
+    .footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      line-height: 20px;
+      background-color: #1a73e8;
+      color: #ffffff;
+      font-size: 0.8rem;
+      text-align: center;
+      border-top: 1px solid #ddd;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
   </style>
 </head>
 <body>
 
   <div class="bar"></div>
-
   <div id="chatBox"></div>
 
   <div id="inputSection">
-    <input
-  type="text"
-  id="queryInput"
-  placeholder="Ask your security concern..."
-/>
+    <div
+      id="queryInput"
+      class="editable-input"
+      contenteditable="true"
+      data-placeholder="Ask your security concern…"
+    ></div>
     <button onclick="sendQuery()">Send</button>
   </div>
 
   <div id="faqSection">
-    <button onclick="handleFAQ('scanEmail')">📧 Email Scan</button>
-    <button onclick="handleFAQ('strongPassword')">📄 Generate Incident Report</button>
+    <button onclick="startEmailScan()">📧 Add Email File</button>
+    <button onclick="generateReport()">📄 Generate Incident Report</button>
+  </div>
+
+  <!-- Hidden file-input for .eml upload -->
+  <input type="file" id="emlFileInput" accept=".eml" style="display:none" />
+
+  <div class="footer">
+    Powered by Suliat Kazeem – SME Chatbot © 2025
   </div>
 
   <script>
-
-     let sessionId = localStorage.getItem("sessionId");
+    // Session persistence
+    let sessionId = localStorage.getItem("sessionId");
     if (!sessionId) {
-    sessionId = crypto.randomUUID();
-    localStorage.setItem("sessionId", sessionId);
+      sessionId = crypto.randomUUID();
+      localStorage.setItem("sessionId", sessionId);
     }
-  
-    let expectingEmailScan = false;
 
-    const chatBox = document.getElementById("chatBox");
-    const input = document.getElementById("queryInput");
+    const chatBox  = document.getElementById("chatBox");
+    const inputDiv = document.getElementById("queryInput");
+    const fileIn   = document.getElementById("emlFileInput");
+    let minHeight;
 
+    // Record one-line height on load
+    window.addEventListener("DOMContentLoaded", () => {
+      minHeight = inputDiv.clientHeight;
+    });
+
+    // Auto-resize only when content exceeds one line
+    inputDiv.addEventListener("input", autoResize);
+    function autoResize() {
+      // reset height so scrollHeight is correct
+      inputDiv.style.height = "auto";
+      if (inputDiv.scrollHeight > minHeight) {
+        inputDiv.style.height = inputDiv.scrollHeight + "px";
+      } else {
+        inputDiv.style.height = "";
+      }
+    }
+
+    // Send on Enter (no Shift), allow Shift+Enter for newline
+    inputDiv.addEventListener("keydown", (e) => {
+      if (e.key === "Enter" && !e.shiftKey) {
+        e.preventDefault();
+        sendQuery();
+      }
+    });
+
+    // 1) Regular text/query
     async function sendQuery() {
-      const query = input.value.trim();
+      const query = inputDiv.innerText.trim();
       if (!query) return;
 
       chatBox.style.display = "block";
       addMessage("user", query);
-      input.value = "";
 
-      let fullQuery = query;
-      if (expectingEmailScan) {
-        fullQuery = `Please scan this email for suspicious activity: ${query}`;
-        expectingEmailScan = false;
-      }
+      // clear and collapse
+      inputDiv.innerText = "";
+      inputDiv.style.height = "";
 
       try {
-        const response = await fetch("/chat", {
+        const resp = await fetch("/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ query: fullQuery, session_id: sessionId }),
+          body: JSON.stringify({ query, session_id: sessionId }),
         });
-        const text = await response.text();
+        const text = await resp.text();
         addMessage("bot", text);
-      } catch (error) {
-        console.error("Fetch error:", error);
+      } catch {
         addMessage("bot", "Sorry, there was an error processing your request.");
       }
     }
 
+    // 2) Email-file scan
+    function startEmailScan() {
+      chatBox.style.display = "block";
+      fileIn.click();
+    }
+    fileIn.addEventListener("change", async () => {
+      const file = fileIn.files[0];
+      if (!file) return;
+      addMessage("user", `Uploading ${file.name} for scan…`);
+      const form = new FormData();
+      form.append("email_file", file);
+      try {
+        const resp = await fetch("/scan-email-file", {
+          method: "POST",
+          body: form
+        });
+        const text = await resp.text();
+        addMessage("bot", text);
+      } catch {
+        addMessage("bot", "Error scanning that email file.");
+      } finally {
+        fileIn.value = "";
+      }
+    });
+
+    // 3) Incident report fallback
+    function generateReport() {
+      chatBox.style.display = "block";
+      inputDiv.innerText = "I need to generate an incident report.";
+      autoResize();
+      sendQuery();
+    }
+
+    // Append a message bubble (renders Markdown via marked.js)
     function addMessage(sender, text) {
       const div = document.createElement("div");
       div.className = `message ${sender}`;
-      div.textContent = text;
+      div.innerHTML = marked.parse(text);
       chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
     }
-
-    input.addEventListener("keydown", function (e) {
-      if (e.key === "Enter") sendQuery();
-    });
-
-    function handleFAQ(type) {
-      switch (type) {
-
-        case "scanEmail":
-          expectingEmailScan = true;
-          chatBox.style.display = "block";
-
-          addMessage("bot", "Please enter the email you would like me to scan");
-          return;
-
-        case "generateReport":
-          chatBox.style.display = "block";
-          input.value = "I need to generate an incident report.";
-          sendQuery();
-          return;
-
-      }
-    }
   </script>
-
-  <div class="footer">
-    <p>
-      Powered by Suliat Kazeem - The Official Person who created the SME Chatbot<br>
-      © Copyright 2025
-    </p>
-  </div>
 </body>
 </html>
